app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";

body {
  background: #dbe0e5;
  font-family: 'Verdana', sans-serif;
}

.container {
  width: 100%!important;
}

.col-md-8 {
  width: 60%;
  margin-left: 20%;
  margin-right: 20%;
  background: #ffff;
  border-radius: 5px;
}

.landing {
  width: 60%;
  margin-left: 20%;
  margin-right: 20%;
}

.nav {
  border: 0px;
  padding-left: 10px;
  padding-right: 20px;
  margin-bottom: 20px;
  width: 100%!important;
  background: #ffff;
}

.linkit {
  color: rgb(255, 69, 0)!important;
  font-family: 'Varela Round', sans-serif!important;
}

.fa-dollar-sign {
  color: rgb(255, 69, 0)!important;
  margin-top: 20px;
}

.btn-primary {
  background-color: rgb(0, 121, 211)!important;
}
.nav-link a {
  color: #000000;
  text-decoration: none!important;
  padding-right: 20px!important;
  padding-left: 20px!important;
  padding-top: 25px!important;
  padding-bottom: 20px!important;
}

.brand {
  padding-left: 20px;
  font-family: 'Varela Round', sans-serif!important;
}

.brand a {
  font-weight: bold;
  color: rgb(255, 69, 0)!important;
  font-size: 20px;
  padding-top: 20px!important;
}

.user-info {
  margin-top: 5px;
  margin-right: 5px;
  display: inline-block;
}

.jumbotron {
  background: #ffff!important;
  margin-top: 100px;
}

.sign-out {
  margin-left: 5px;
  margin-top: 10px;
}

.name {
  margin-left: 10px;
  margin-top: 10px;
}

h1 {
  padding-bottom: 20px;
}

.btn-success, .btn-danger, .favorite, .btn-primary {
  margin-bottom: 20px;
}

.favorite, .edit {
  margin-left: 10px;
  margin-top: 10px;
}

.comment-form {
  margin-left: 15px;
}

.sign-up-home {
  margin-bottom: 0!important;
}

.new-post {
  margin-left: 10px;
}

.signin {
  padding-top: 5px;
}
.question {
  margin-bottom: 0!important;
  margin-left: 10px;
}

.submitted {
  font-size: 15px;
}

.up-down-votes {
  margin-left: 0!important;
  padding-left: 0!important;
}

.media, .topics {
  background: #ffff;
  padding: 20px;
  border-radius: 5px;
  margin-bottom: 10px;
}

p, h1, h2, h3, h4, small, strong, .checkbox {
  padding-left: 10px;
  padding-right: 10px;
}

.topic {
  padding: 0px!important;
}

.home {
  background: #ffff;
  border-radius: 5px;
  width: 30%;
  padding-bottom: 10px;
}

.center-card {
  margin-left: 5%;
  margin-right:5%;
}

.media-heading a {
  color: black!important;
  font-weight: bold!important;
}

.sponsored {
  margin-left: 0px!important;
}
.posts {
  width: 90%;
  margin-left: 20px;
}

@media (max-width: 800px) {
  .col-md-8, .landing {
    width: 90%!important;
    margin-left: 5%!important;
    margin-right: 5%!important;
  }
  h1 {
    font-size: 25px!important;
  }
  h3 {
    font-size: 20px!important;
  }
}

@media (max-width: 991px) {
  .home {
    margin-right: auto;
    margin-left: auto;
    padding-top: 5px;
    padding-bottom: 5px;
    margin-bottom: 10px;
    width: 90%;
  }
}

@media (max-width: 1000px) {
  .col-md-8, .landing {
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
  }
}

